--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -8,9 +8,11 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
+      <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.3" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
       <PackageReference Include="RepoDb.Sqlite.Microsoft" Version="1.13.1" />
+      <PackageReference Include="RepoDb.SQLite.System" Version="1.13.1" />
       <PackageReference Include="SQLite" Version="3.13.0" />
     </ItemGroup>
     
