Added correct sqlite datasource and fixed services and repositories

--- a/Web.API/appsettings.Development.json
+++ b/Web.API/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "dgii-db": "Data Source=../Infrastructure/DataSource/dgii-db",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
