--- a/Web.API/appsettings.json
+++ b/Web.API/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "dgii-db": "Data Source=/Users/rafaelpeguero/Documents/Projects/Personal/DGII-Assesment-API/dgii.db",
+  "dgii-db": "Data Source=../Infrastructure/DataSource/dgii-db",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
